samples/_failures_safe/1761538132_8740f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_097971ed.c: In function ‘main’:
./samples/SAFE/__tmp_097971ed.c:151:22: error: expected ‘;’ at end of input
  151 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_097971ed.c:151:5: error: expected declaration or statement at end of input
  151 |     for (int i = 0; i
      |     ^~~
